@@ -185,7 +185,7 @@
         <title><varname>Format</varname></title>
         <para>
           Required single line: URI of the format specification, such as:
-          <literal>http://www.debian.org/doc/copyright-format/1.0</literal>
+          <literal>http://www.debian.org/doc/packaging-manuals/copyright-format/1.0/</literal>
         </para>
       </section>
 
@@ -278,7 +278,7 @@
 
       <section id="example-header-paragraph">
         <title>Example header paragraph</title>
-<programlisting>Format: &lt;VERSIONED_FORMAT_URL&gt;
+<programlisting>Format: http://www.debian.org/doc/packaging-manuals/copyright-format/1.0/
 Upstream-Name: SOFTware
 Upstream-Contact: John Doe &lt;john.doe@example.com&gt;
 Source: http://www.example.com/software/project</programlisting>
@@ -1072,7 +1072,7 @@ also delete it here.</programlisting>
         A possible <filename>debian/copyright</filename> file for the program
         <quote>X Solitaire</quote> distributed in the Debian source package
         <literal>xsol</literal>:
-<programlisting><![CDATA[Format: <VERSIONED_FORMAT_URL>
+<programlisting><![CDATA[Format: http://www.debian.org/doc/packaging-manuals/copyright-format/1.0/
 Upstream-Name: X Solitaire
 Source: ftp://ftp.example.com/pub/games
 
@@ -1113,7 +1113,7 @@ License: GPL-2+
         A possible <filename>debian/copyright</filename> file for the program
         <quote>Planet Venus</quote>, distributed in the Debian source
         package <literal>planet-venus</literal>:
-<programlisting><![CDATA[Format: <VERSIONED_FORMAT_URL>
+<programlisting><![CDATA[Format: http://www.debian.org/doc/packaging-manuals/copyright-format/1.0/
 Upstream-Name: Planet Venus
 Upstream-Contact: John Doe <jdoe@example.com>
 Source: http://www.example.com/code/venus
